user manage frontend and backend

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -36,6 +36,11 @@
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
+                    <a [routerLink]='["/users"]' (click)='collapse()'>
+                        <span class='fa fa-users'></span> Users
+                    </a>
+                </li>
+                <li [routerLinkActive]='["link-active"]'>
                     <a [routerLink]='["/Customers"]' (click)='collapse()'>
                         <span class='fa fa-users'></span> Customers
                     </a>
