Add customer endpoints and components

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/Customers"]' (click)='collapse()'>
+                    <a [routerLink]='["/customers"]' (click)='collapse()'>
                         <span class='fa fa-users'></span> Customers
                     </a>
                 </li>
