--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,7 +17,7 @@
                     {{profile.email}}
                 </div>
                 <div class="profile-usertitle-job">
-                    Developer
+                    {{profile.role?'Admin':'Employee'}}
                 </div>
             </div>
             <!-- END SIDEBAR USER TITLE -->
