--- a/ClientApp/src/app/Customers/customer-form/customer-form.component.html
+++ b/ClientApp/src/app/Customers/customer-form/customer-form.component.html
@@ -1,3 +1,50 @@
-<p>
-  customer-form works!
-</p>
+<h2>Cutomer Form</h2>
+
+<div class="panel panel-default">
+  <div class="panel-heading">Customer Form</div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" name="name" id="name">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="address">Address</label>
+          <input type="text" class="form-control" name="address" id="address">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="mobile">Mobile</label>
+          <input type="text" class="form-control" name="mobile" id="mobile">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" name="email" id="email">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="job">Job</label>
+          <ng-select [items]="jobs" bindLabel="name" bindValue="id" placeholder="Select Job" [(ngModel)]="customer.JobId">
+          </ng-select>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for=""></label>
+          <input type="text" class="form-control">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
